[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/mapCompleto.png" type="Texture" id=1]
[ext_resource path="res://Map.gd" type="Script" id=3]
[ext_resource path="res://assets/Party.png" type="Texture" id=4]
[ext_resource path="res://assets/Decidiendo.png" type="Texture" id=5]
[ext_resource path="res://assets/Work.png" type="Texture" id=6]
[ext_resource path="res://world.gd" type="Script" id=7]
[ext_resource path="res://Health/HealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Health/Health.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/workPanel.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.909804, 0.513726, 0.454902, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.729412, 0.478431, 1 )
border_color = Color( 1, 1, 0.921569, 1 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )

[node name="LevelLayer" type="CanvasLayer" parent="."]

[node name="WorkPanel" type="Node2D" parent="LevelLayer"]
position = Vector2( -160, 64 )

[node name="Sprite" type="Sprite" parent="LevelLayer/WorkPanel"]
texture = ExtResource( 10 )
centered = false

[node name="CheckButton" type="Button" parent="LevelLayer/WorkPanel"]
margin_left = 16.0
margin_top = 56.0
margin_right = 144.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton2" type="Button" parent="LevelLayer/WorkPanel"]
margin_left = 16.0
margin_top = 152.0
margin_right = 144.0
margin_bottom = 176.0

[node name="CheckButton3" type="Button" parent="LevelLayer/WorkPanel"]
margin_left = 16.0
margin_top = 248.0
margin_right = 144.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="LevelLayer/WorkPanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="LevelLayer/WorkPanel"]
margin_left = 16.0
margin_top = 112.0
margin_right = 144.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit3" type="TextEdit" parent="LevelLayer/WorkPanel"]
margin_left = 16.0
margin_top = 208.0
margin_right = 144.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Node2D" parent="LevelLayer"]
position = Vector2( 243.934, -171.147 )
z_index = 1000
script = ExtResource( 3 )

[node name="mapCompleto" type="Sprite" parent="LevelLayer/Map"]
position = Vector2( -171.934, -84.853 )
z_index = -5
z_as_relative = false
texture = ExtResource( 1 )
centered = false

[node name="Tween" type="Tween" parent="LevelLayer/Map"]

[node name="Travel" type="Control" parent="LevelLayer/Map"]
margin_left = -11.934
margin_top = 195.147
margin_right = 212.066
margin_bottom = 243.147
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LevelLayer/Map/Travel"]
visible = false
margin_left = 56.0
margin_top = 24.0
margin_right = 156.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="LevelLayer/Map/Travel"]
margin_left = 16.0
margin_top = -24.0
margin_right = 192.0
margin_bottom = 16.0
text = "sssssssssss"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartyBsck" type="Node" parent="LevelLayer"]

[node name="sprite" type="Sprite" parent="LevelLayer/PartyBsck"]
visible = false
z_index = -10
texture = ExtResource( 4 )
centered = false

[node name="DecBack" type="Node" parent="LevelLayer"]

[node name="sprite" type="Sprite" parent="LevelLayer/DecBack"]
visible = false
z_index = -10
texture = ExtResource( 5 )
centered = false

[node name="WorkBack" type="Node" parent="LevelLayer"]

[node name="sprite" type="Sprite" parent="LevelLayer/WorkBack"]
visible = false
z_index = -10
texture = ExtResource( 6 )
centered = false

[node name="Button" type="Button" parent="LevelLayer"]
margin_left = 8.0
margin_top = 440.0
margin_right = 84.0
margin_bottom = 473.0
text = "Fun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="LevelLayer"]
margin_left = 88.0
margin_top = 440.0
margin_right = 164.0
margin_bottom = 473.0
text = "Work"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="LevelLayer"]
margin_left = 168.0
margin_top = 440.0
margin_right = 244.0
margin_bottom = 473.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Travel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="LevelLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -304.0
margin_top = 168.0
margin_right = -264.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="LevelLayer/Control" instance=ExtResource( 8 )]

[node name="Control2" type="Control" parent="LevelLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -304.0
margin_top = 208.0
margin_right = -264.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="LevelLayer/Control2" instance=ExtResource( 8 )]

[node name="Health" parent="LevelLayer" instance=ExtResource( 9 )]

[node name="Health2" parent="LevelLayer" instance=ExtResource( 9 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="LevelLayer/Button" to="." method="_on_Party_pressed"]
[connection signal="pressed" from="LevelLayer/Button2" to="." method="_on_work_pressed"]
[connection signal="pressed" from="LevelLayer/Button3" to="LevelLayer/Map" method="_on_Button3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
